added new section

--- a/optic/index.html
+++ b/optic/index.html
@@ -1292,6 +1292,112 @@
       </div>
    </div>
 </section>
+         <section class="section send">
+   <div class="send__content content">
+      <div class="send__title title">Залишити відгук</div>
+
+      <div class="heading send__heading">
+         Поділися своїм досвідом співпраці з нами
+      </div>
+
+      <div class="send__row">
+         <div class="send__form">
+            <form action="">
+               <p>Ваша оцінка</p>
+
+               <div class="send__stars">
+                  <input type="radio" value="1" name="star" id="star1">
+                  <input type="radio" value="2" name="star" id="star2">
+                  <input type="radio" value="3" name="star" id="star3">
+                  <input type="radio" value="4" name="star" id="star4">
+                  <input type="radio" value="5" name="star" id="star5">
+               </div>
+
+               <div class="send__box">
+                  <input type="text" placeholder="Ваше ім'я...">
+                  <input type="tel" placeholder="Ваш телефон...">
+               </div>
+
+               <textarea placeholder="Коментар..." cols="30" rows="10"></textarea>
+
+               <input type="submit" class="button" value="Залишити відгук">
+            </form>
+         </div>
+
+         <div class="send__google">
+            <div class="send__google__content">
+               <div class="send__select">
+                  <p>
+                     <span></span>
+                     <span></span>
+                     <span></span>
+                  </p>
+   
+                  <div class="send__options">
+                     <p class="send__option">
+                        <span>вул. Городоцька, 35</span>
+                        <span>
+                           https://www.google.com/maps/place/%D0%A4%D0%B0%D0%B9%D0%BD%D0%B0+%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%B0,+%D0%93%D0%BE%D1%80%D0%BE%D0%B4%D0%BE%D1%86%D1%8C%D0%BA%D0%B0,+35/@49.8428981,24.0188444,17z/data=!4m5!3m4!1s0x473add73f3ff4ac1:0x3e7838337fb1adab!8m2!3d49.8428862!4d24.0210344
+                        </span>
+                     </p>
+   
+                     <p class="send__option">
+                        <span>вул. Городоцька, 77</span>
+                        <span>
+                           https://www.google.com/maps/place/%D0%A4%D0%B0%D0%B9%D0%BD%D0%B0+%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%B0,+%D0%93%D0%BE%D1%80%D0%BE%D0%B4%D0%BE%D1%86%D1%8C%D0%BA%D0%B0,+77/@49.8343426,23.9805696,14.12z/data=!4m5!3m4!1s0x473add76fe852d41:0x794d9750a0a5c689!8m2!3d49.841015!4d24.0145769
+                        </span>
+                     </p>
+   
+                     <p class="send__option">
+                        <span>вул. Городоцька, 133</span>
+                        <span>
+                           https://www.google.com/maps/place/%D0%A4%D0%B0%D0%B9%D0%BD%D0%B0+%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%B0,+%D0%93%D0%BE%D1%80%D0%BE%D0%B4%D0%BE%D1%86%D1%8C%D0%BA%D0%B0,+133/@49.8340686,24.0051637,14z/data=!4m5!3m4!1s0x473addafe8a54147:0xe87a39c38cd81fb8!8m2!3d49.8368043!4d24.0033299?shorturl=1
+                        </span>
+                     </p>
+   
+                     <p class="send__option">
+                        <span>вул. Кавалерідзе, 1</span>
+                        <span>
+                           https://www.google.com/maps/place/%D0%A4%D0%B0%D0%B9%D0%BD%D0%B0+%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%B0,+%D0%9A%D0%B0%D0%B2%D0%B0%D0%BB%D0%B5%D1%80%D1%96%D0%B4%D0%B7%D0%B5,1/@49.7937162,24.0626328,17z/data=!3m1!4b1!4m5!3m4!1s0x473ae86b3bbd0d57:0x3625492bb8349799!8m2!3d49.7937162!4d24.0648215
+                        </span>
+                     </p>
+   
+                     <p class="send__option">
+                        <span>вул. Куліша, 43</span>
+                        <span>
+                           https://www.google.com/maps/place/%D0%A4%D0%B0%D0%B9%D0%BD%D0%B0+%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%B0,+%D0%9A%D1%83%D0%BB%D1%96%D1%88%D0%B0,43/@49.8484849,24.0218453,17z/data=!4m5!3m4!1s0x473add0b6ee8df5f:0x4977c4edc67d8f6d!8m2!3d49.8484756!4d24.0241736
+                        </span>
+                     </p>
+   
+                     <p class="send__option">
+                        <span>вул. Мазепи, 25а</span>
+                        <span>
+                           https://www.google.com/maps/place/%D0%A4%D0%B0%D0%B9%D0%BD%D0%B0+%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%B0,+%D0%9C%D0%B0%D0%B7%D0%B5%D0%BF%D0%B8,+25%D0%B0/@49.8728262,24.0379055,17z/data=!3m1!4b1!4m5!3m4!1s0x473adcf888efc6c1:0xdfe9556dbcabb904!8m2!3d49.8728182!4d24.0400339
+                        </span>
+                     </p>
+   
+                     <p class="send__option">
+                        <span>вул. Петлюри, 2</span>
+                        <span>
+                           https://www.google.com/maps/place/%D0%A4%D0%B0%D0%B9%D0%BD%D0%B0+%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%B0,+%D0%9F%D0%B5%D1%82%D0%BB%D1%8E%D1%80%D0%B8,+2/@49.8231145,23.9754594,17z/data=!3m1!4b1!4m5!3m4!1s0x473ae799227fc189:0xc2ac3ce13d18575b!8m2!3d49.8230711!4d23.9775543
+                        </span>
+                     </p>
+   
+                     <p class="send__option">
+                        <span>пр-т. Червоної Калини, 94</span>
+                        <span>
+                           https://www.google.com/maps/place/%D0%A4%D0%B0%D0%B9%D0%BD%D0%B0+%D0%BE%D0%BF%D1%82%D0%B8%D0%BA%D0%B0,+%D0%BF%D1%80-%D1%82.%D0%A7%D0%B5%D1%80%D0%B2%D0%BE%D0%BD%D0%BE%D1%97+%D0%9A%D0%B0%D0%BB%D0%B8%D0%BD%D0%B8,94/@49.785627,24.0539896,16z/data=!4m6!3m5!1s0x473ae935ae868fa5:0xba6c4889d4fa40a8!8m2!3d49.7856258!4d24.0583101!15sCjbQpNCw0LnQvdCwINC-0L_RgtC40LrQsCzRh9C10YDQstC-0L3QvtGXINC60LDQu9C40L3QuCxaNyI10YTQsNC50L3QsCDQvtC_0YLQuNC60LAg0YfQtdGA0LLQvtC90L7RlyDQutCw0LvQuNC90LiSAQhvcHRpY2lhbg?shorturl=1
+                        </span>
+                     </p>
+                  </div>
+               </div>
+   
+               <a href="" class="button" target="_blank">Залишити відгук в Google Maps</a>
+            </div>
+         </div>
+      </div>
+   </div>
+</section>
          <section class="section where" id="where">
    <div class="where__content content">
       <div class="where__heading heading">
