--- a/livingRoom/home-ar.html
+++ b/livingRoom/home-ar.html
@@ -44,7 +44,7 @@
 
         <div class="head__title">
             <p>
-                <span> Livingroom </span> הוא מועדון חברתי ועסקי.
+                <span> סלון </span> הוא מועדון חברתי ועסקי.
             </p>
             <p>
                 <span> מארח פגישות </span> עם סגנון.
