--- a/livingRoom/index.html
+++ b/livingRoom/index.html
@@ -44,7 +44,7 @@
 
         <div class="head__title">
             <p>
-                <span> סלון </span> הוא מועדון חברתי ועסקי.
+                <span>Livingroom</span> is a social and business club.
             </p>
             <p>
                 <span>Host meetings</span> with style. 
