create sliders and added live fleg

--- a/livingRoom/index.html
+++ b/livingRoom/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
    <head>
       <meta charset="UTF-8">
-      <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <link rel="stylesheet" href="css/style.min.css">
       <title>LivingRoom</title>
    </head>
@@ -378,9 +378,11 @@
         </h2>
 
         <ul class="events__list">
-            <li class="events__item">
+            <li class="events__item events__item--live">
                 <div class="events__photo">
                     <img src="./img/slider-4-1.png" alt="events photo">
+                    
+                    <span>Live</span>
                 </div>
 
                 <div class="events__info">
@@ -397,6 +399,8 @@
             <li class="events__item">
                 <div class="events__photo">
                     <img src="./img/slider-4-2.png" alt="events photo">
+                    
+                    <span>Live</span>
                 </div>
 
                 <div class="events__info">
@@ -411,9 +415,11 @@
                 </div>
             </li>
 
-            <li class="events__item">
+            <li class="events__item events__item--live">
                 <div class="events__photo">
                     <img src="./img/slider-4-3.png" alt="events photo">
+
+                    <span>Live</span>
                 </div>
 
                 <div class="events__info">
