added new pages

--- a/livingRoom/membership-en.html
+++ b/livingRoom/membership-en.html
@@ -27,8 +27,8 @@
             </div>
    
             <ul class="lang__list">
-               <li><a href="./index.html">En</a></li>
-               <li><a href="./home-ar.html">תיִרבִע</a></li>
+               <li class="lang__item lang__item--active"><a href="./index.html">En</a></li>
+               <li class="lang__item"><a href="./home-ar.html">He</a></li>
             </ul>
          </div>
        </div>
@@ -95,14 +95,10 @@
             You're welcome to visit us
         </p>
 
-        <a href="#">Book appointment</a>
+        <a href="https://api.whatsapp.com/send?phone=+972526543217&Hi,%25I%25want%25to%25book%25the%25appointment%25at%25the%25livingroom">Book appointment</a>
     </div>
 </section>
       </main>
-
-      <div class="preloader">
-         <img src="./img/preloader.png" alt="preloader">
-      </div>
 
       <script src="./js/jquery-3.5.1.min.js"></script>
 <script src="./js/slick.min.js"></script>
