--- a/livingRoom/room1.html
+++ b/livingRoom/room1.html
@@ -340,7 +340,7 @@
             </li>
         </ul>
 
-        <a class="tariff__submit button">
+        <a href="./membership-en.html" class="tariff__submit button">
             Confirm booking
         </a>
     </div>
