--- a/livingRoom/room8.html
+++ b/livingRoom/room8.html
@@ -39,9 +39,9 @@
          <section class="head">
     <div class="head__content">
         <div class="head__photo">
-            <img src="./img/photo.png" alt="membership main photo">
+            <img src="./img/photo-7.png" alt="membership main photo">
 
-            <h1 class="hidden">room1</h1>
+            <h1 class="hidden">room8</h1>
         </div>
     </div>
 </section>
@@ -340,7 +340,7 @@
             </li>
         </ul>
 
-        <a class="tariff__submit button">
+        <a href="./membership-en.html" class="tariff__submit button">
             Confirm booking
         </a>
     </div>
