added ticket for book capsule

--- a/livingRoom/capsule-ticket.html
+++ b/livingRoom/capsule-ticket.html
@@ -65,7 +65,7 @@
                         </div>
 
                         <p class="ticket__place">
-                            The Pier Louie Capsule
+                            <span></span> Capsule
                         </p>
                     </div>
 
@@ -80,7 +80,7 @@
                         </p>
 
                         <p>
-                            <span class="ticket__timeFrom">13:00</span>-
+                            <span class="ticket__timeFrom">13:00</span>
                             <span class="ticket__timeTo">15:00</span>
                         </p>
                     </div>
@@ -93,9 +93,18 @@
 </section>
       </main>
 
+      <div class="preloader">
+         <img src="./img/preloader.png" alt="preloader">
+      </div>
+
       <script src="./js/jquery-3.5.1.min.js"></script>
 <script src="./js/slick.min.js"></script>
 <script src="./js/script.min.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-app.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-auth.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/8.9.1/firebase-database.js"></script>
+         
+      <script src='./js/firebase.min.js'></script>
    </body>
 
 </html>
