--- a/livingRoom/membership-en.html
+++ b/livingRoom/membership-en.html
@@ -44,58 +44,106 @@
             <h1>Membership</h1>
         </div>
 
-        <div class="head__title">
+        <div class="head__title membership__head-title">
             <p>
-                Born from an understanding that great connections starts with a conversation 
+                Everything <br>
+                for our members
             </p>
+
+            <a href="./membership-dark.html" class="membership__button">Book appointment</a>
         </div>
 
-        <p class="head__paragraph">
-            Our Membership program allow you to book one of our state of the art 
-            living-room to host business meetings with style Or party and have fun with friends 
-        </p>
-    </div>
-</section>
-          <section class="section space">
-    <div class="space__content">
-        <img src="./img/space-place.png" alt="space place background">
-
-        <p>Our Space, Your place</p>
+        <div class="membership__video">
+            
+        </div>
     </div>
 </section>
           <section class="join section">
     <div class="join__content content">
         <h2 class="join__heading">
-            Join Us
+            Our Story
         </h2>
 
         <div class="join__paragraph">
             <p>
-                The livingroom in Tlv is a baby born lifestyle and retail brand.
-                the first of a global membership brand that our members will 
-                use the livingroom platform to work, socialize, connect, create and flourish.
+                Livingroom is an all-day and all-night private members 
+                club for social&business people to come together.
             </p>
         </div>
 
         <div class="join__text">
             <p>
-                “It is said that a picture is worth a thousand words, 
-                but a visit to the Livingroom is worth a thousand pictures”
+                Born from an understanding that great 
+                connections starts with a conversation
             </p>
         </div>
+    </div>
+</section>
+          <section class="membership-list section">
+    <div class="membership-list__content content">
+        <p class="membership-list__paragraph">
+            Our Membership program allow you to book one of our state of the art:
+        </p>
+
+        <ul class="membership-list__list">
+            <li class="membership-list__item">
+                Living-room to host your business meetings with style;
+            </li>
+
+            
+            <li class="membership-list__item">
+                Or party and have fun with friends;
+            </li>
+        </ul>
+    </div>
+</section>
+          <section class="section work">
+    <div class="work__content content">
+        <ul class="work__list">
+            <li class="work__item">
+                <div class="work__photo">
+                    <img src="./img/slider-2-1.png" alt="work photo">
+
+                    <p class="work__title title">
+                        Business meetings
+                    </p>
+                </div>
+            </li>
+
+            <li class="work__item">
+                <div class="work__photo">
+                    <img src="./img/slider-2-2.png" alt="work photo">
+
+                    <p class="work__title title">
+                        Groupthink
+                    </p>
+                </div>
+            </li>
+
+            <li class="work__item">
+                <div class="work__photo">
+                    <img src="./img/slider-2-3.png" alt="work photo">
+
+                    <p class="work__title title">
+                        Meet-ups
+                    </p>
+                </div>
+            </li>
+        </ul>
     </div>
 </section>
           <section class="open section">
     <div class="open__content content">
         <h2 class="open__heading heading">
-            Open House July And August
+            Interested in becoming a member?
         </h2>
 
-        <p>
-            You're welcome to visit us
-        </p>
-
-        <a href="https://api.whatsapp.com/send?phone=+972526543217&Hi,%25I%25want%25to%25book%25the%25appointment%25at%25the%25livingroom">Book appointment</a>
+        <a 
+            href="./membership-dark.html"
+            class="membership__button"
+        >
+            Apply for membership
+        </a>
     </div>
 </section>
       </main>
